<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="10dp">

    <View
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:background="@drawable/bg_gray_rounded" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />


    <androidx.cardview.widget.CardView
        app:cardElevation="0dp"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/saved_credential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        app:cardBackgroundColor="#3E8E8E8E"
        app:cardCornerRadius="4dp"
        app:contentPadding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Você tem uma credencial salva,\n toque aqui para recuperar." />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/database_key"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_config_database_key">

        <com.google.android.material.textfield.TextInputEditText
            android:lines="1"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/private_key"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_config_private_key">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Confirmar" />


    <LinearLayout
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/save_credentials"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_config_save_credentials" />

        <ImageButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:padding="4dp"
            android:src="@drawable/ic_round_help_outline_24" />

    </LinearLayout>

</LinearLayout>